--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
   <header>
+    <div class="editar">
     <nav>
       <a class="logo" href="index.html">Bit Finance</a>
       <div class="mobile-menu">
@@ -21,12 +22,13 @@
       <ul class="nav-list">
         <li><a href="index.html">Início</a></li>
         <li><a href="produto.html">Serviço</a></li>
-        <li><a href="contato.html">Contato</a></li>
         <li><a href="login.html">Login</a></li>
         <li><a href="cadastro.html">Cadastro</a></li>
+        <li><a href="contato.html">Contato</a></li>
         <li><a href="Quemsomos.html">Quem Somos</a></li>
       </ul>
     </nav>
+  </div>
   </header>  
 <main>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -45,17 +47,17 @@
   <div class="box">
     <h2>Inicio</h2>
     <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Produtos</a></li>
-        <li><a href="#">Login</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="produto.html">Serviço</a></li>
+        <li><a href="login.html">Login</a></li>
     </ul>
   </div>
   <div class="box">
     <h2>Contato</h2>
     <ul>
-        <li><a href="#">Contato</a></li>
-        <li><a href="#">Cadastro</a></li>
-        <li><a href="#">Quem somos</a></li>
+        <li><a href="cadastro.html">Cadastro</a></li>
+        <li><a href="contato.html">Contato</a></li>
+        <li><a href="Quemsomos.html">Quem somos</a></li>
     </ul>
   </div>
   <div class="box">
@@ -64,13 +66,6 @@
   </div>
  
 </footer>
-
-
-
-
-
-
-
 <script src="./js/script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
