fiz a pagina Principal

--- a/index.html
+++ b/index.html
@@ -29,35 +29,177 @@
           <li><a href="login.html">Login</a></li>
           <li><a href="cadastro.html">Cadastro</a></li>
           <li><a href="contato.html">Contato</a></li>
-          <li><a href="Quemsomos.html">Quem Somos</a></li>
         </ul>
       </nav>
     </div>
   </header>
   <main>
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true"
+          aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="img/analista-recomenda-bitcoin-saida-total-mercado-financeiro-tradicional.jpg" class="d-block w-100"
-            alt="...">
+          <img src="img/analista-recomenda-bitcoin-saida-total-mercado-financeiro-tradicional.jpg"
+            class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
+            preserveAspectRatio="xMidYMid slice" focusable="false">
+          <rect width="100%" height="100%" fill="#777" /></svg>
+
+          <div class="container">
+            <div class="carousel-caption text-start">
+              <h1>Somos a líder</h1>
+              <p>Em acesso ao sistema financeiro americano para brasileiros</p>
+              <p><a class="btn btn-lg btn-primary" href="cadastro.html">Faça seu cadastro</a></p>
+            </div>
+          </div>
         </div>
         <div class="carousel-item">
-          <img src="img/bitcoin-criptomoedas-3.webp" class="d-block w-100" alt="...">
+          <img src="img/bitcoin-criptomoedas-3.webp" class="bd-placeholder-img" width="100%" height="100%"
+            xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice"
+            focusable="false">
+          <rect width="100%" height="100%" fill="#777" /></svg>
+
+          <div class="container">
+            <div class="carousel-caption">
+              <h1>Nossa Estrutura</h1>
+              <p>A estrutura da Bit Finace é composta por instituições financeiras no Brasil e nos EUA, que em conjunto
+                oferecem uma experiência completa, regulada e segura.</p>
+              <p><a class="btn btn-lg btn-primary" href="produto.html">Conheça nosso serviços</a></p>
+            </div>
+          </div>
         </div>
         <div class="carousel-item">
-          <img src="img/Graficos-Bolsa-de-Valores-scaled.webp" class="d-block w-100" alt="...">
+          <img src="img/Graficos-Bolsa-de-Valores-scaled.webp" class="bd-placeholder-img" width="100%" height="100%"
+            xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice"
+            focusable="false">
+          <rect width="100%" height="100%" fill="#777" /></svg>
+
+          <div class="container">
+            <div class="carousel-caption text-end">
+              <h1>Criptomoedas</h1>
+              <p>Solidez e experiência</p>
+              <p><a class="btn btn-lg btn-primary" href="produto.html">Faça um Simulação</a></p>
+            </div>
+          </div>
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-        data-bs-slide="prev">
+      <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-        data-bs-slide="next">
+      <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
+    </div>
+
+    <div class="container marketing">
+
+      <!-- Three columns of text below the carousel -->
+      <div class="row">
+        <div class="col-lg-4">
+          <img src="img/conta.png" class="bd-placeholder-img rounded-circle" width="140" height="140"
+            xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
+            preserveAspectRatio="xMidYMid slice" focusable="false">
+          <title>Placeholder</title>
+          <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777" dy=".3em"></text></svg>
+
+          <h2 class="fw-normal">Abra uma conta grátis</h2>
+          <p>Crie e ative a sua conta para usar a plataforma.</p>
+          <p><a class="btn btn-secondary" href="produto.html">Crie a Aqui &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <img src="img/dinheiro.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140"
+            xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
+            preserveAspectRatio="xMidYMid slice" focusable="false">
+          <title>Placeholder</title>
+          <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777" dy=".3em"></text></svg>
+
+          <h2 class="fw-normal">Faça um depósito</h2>
+          <p>Use Pix, TED ou DOC e transfira saldo para a sua conta.</p>
+          <p><a class="btn btn-secondary" href="#">Faça seu Deposito &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-4">
+          <img src="img/coin.png" class="bd-placeholder-img rounded-circle" width="140" height="140"
+            xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
+            preserveAspectRatio="xMidYMid slice" focusable="false">
+          <title>Placeholder</title>
+          <rect width="100%" height="100%" fill="#777" /><text x="50%" y="50%" fill="#777" dy=".3em"></text></svg>
+
+          <h2 class="fw-normal">Compre criptoativos</h2>
+          <p>Diversifique sua carteira a partir de R$ 1.</p>
+          <p><a class="btn btn-secondary" href="#">Veja a Sua Carteira &raquo;</a></p>
+        </div><!-- /.col-lg-4 -->
+      </div>
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading fw-normal lh-1">Vantagens de investir em Bitcoin<span class="text-muted">
+              Escassez</span></h2>
+          <p class="lead">Em 2009, quando Satoshi Nakamoto criou o bitcoin, ele determinou que existiriam 21 milhões de
+            unidades desse ativo.</p>
+        </div>
+        <div class="col-md-5">
+          <img src="img/c216gfglfxvaa5ztcg2gfkjhe.jpg"
+            class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"
+            xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
+            preserveAspectRatio="xMidYMid slice" focusable="false">
+          <title>Placeholder</title>
+          <rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa" dy=".3em"></text></svg>
+
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7 order-md-2">
+          <h2 class="featurette-heading fw-normal lh-1">Vantagens de investir em Criptomoedas <span class="text-muted">
+              Liberdade</span></h2>
+          <p class="lead">As transações acontecem com agilidade, os pagamentos são de nível mundial e as taxas de
+            processamento são baixas.</p>
+        </div>
+        <div class="col-md-5 order-md-1">
+          <img src="img/compra-retencao-troca-venda-criptomoedas.jpg"
+            class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"
+            xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
+            preserveAspectRatio="xMidYMid slice" focusable="false">
+          <title>Placeholder</title>
+          <rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa" dy=".3em"></text>
+          </svg>
+
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading fw-normal lh-1">Vantagens De Investir Na Bit Finace<span class="text-muted">
+              Segurança</span></h2>
+          <p class="lead">A Bit Finace é totalmente seguro, Uma vez que usa um banco de dados distribuído que utiliza
+            criptografia de ponta a ponta.</p>
+        </div>
+        <div class="col-md-5">
+          <img src="img/segurança.jpg"
+            class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"
+            xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
+            preserveAspectRatio="xMidYMid slice" focusable="false">
+          <title>Placeholder</title>
+          <rect width="100%" height="100%" fill="#eee" /><text x="50%" y="50%" fill="#aaa" dy=".3em"></text>
+          </svg>
+
+        </div>
+      </div>
+
+      <hr class="featurette-divider">
+
+      <!-- /END THE FEATURETTES -->
+
     </div>
   </main>
 
@@ -75,15 +217,7 @@
       <ul>
         <li><a href="cadastro.html">Cadastro</a></li>
         <li><a href="contato.html">Contato</a></li>
-        <li><a href="Quemsomos.html">Quem somos</a></li>
       </ul>
-    </div>
-    <div class="box">
-      <h2>Sobre Nos</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus eius,
-        consectetur natus tempore sint veniam non
-      </p>
     </div>
   </footer>
   <script src="./js/script.js"></script>
