--- a/login.html
+++ b/login.html
@@ -1,86 +1,69 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
-    />
-    <link rel="stylesheet" href="./css/stile.css" />
-  </head>
-  <body>
-    <header>
-      <div class="editar">
-        <nav>
-          <a class="logo" href="index.html">Bit Finance</a>
-          <div class="mobile-menu">
-            <div class="line1"></div>
-            <div class="line2"></div>
-            <div class="line3"></div>
-          </div>
-          <ul class="nav-list">
-            <li><a href="index.html">Início</a></li>
-            <li><a href="produto.html">Serviço</a></li>
-            <li><a href="login.html">Login</a></li>
-            <li><a href="cadastro.html">Cadastro</a></li>
-            <li><a href="contato.html">Contato</a></li>
-            <li><a href="Quemsomos.html">Quem Somos</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-    <main>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere illum,
-        qui numquam neque voluptate unde aut, dignissimos officia nam atque
-        ducimus dolor. Obcaecati qui vitae est iure harum nisi illum!
-      </p>
-    </main>
 
-    <footer>
-      <div class="box">
-        <h2>Inicio</h2>
-        <ul>
-          <li><a href="index.html">Home</a></li>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
+  <link rel="stylesheet" href="./css/stile.css" />
+</head>
+
+<body>
+  <header>
+    <div class="editar">
+      <nav>
+        <a class="logo" href="index.html">Bit Finance</a>
+        <div class="mobile-menu">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+        <ul class="nav-list">
+          <li><a href="index.html">Início</a></li>
           <li><a href="produto.html">Serviço</a></li>
           <li><a href="login.html">Login</a></li>
-        </ul>
-      </div>
-      <div class="box">
-        <h2>Contato</h2>
-        <ul>
           <li><a href="cadastro.html">Cadastro</a></li>
           <li><a href="contato.html">Contato</a></li>
-          <li><a href="Quemsomos.html">Quem somos</a></li>
         </ul>
-      </div>
-      <div class="box">
-        <h2>Sobre Nos</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus eius,
-          consectetur natus tempore sint veniam non
-        </p>
-      </div>
-    </footer>
-    <script src="./js/script.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"
-      integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+      </nav>
+    </div>
+  </header>
+  <main>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere illum,
+      qui numquam neque voluptate unde aut, dignissimos officia nam atque
+      ducimus dolor. Obcaecati qui vitae est iure harum nisi illum!
+    </p>
+  </main>
+
+  <footer>
+    <div class="box">
+      <h2>Inicio</h2>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="produto.html">Serviço</a></li>
+        <li><a href="login.html">Login</a></li>
+      </ul>
+    </div>
+    <div class="box">
+      <h2>Contato</h2>
+      <ul>
+        <li><a href="cadastro.html">Cadastro</a></li>
+        <li><a href="contato.html">Contato</a></li>
+      </ul>
+    </div>
+  </footer>
+  <script src="./js/script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"
+    integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
