--- a/index.html
+++ b/index.html
@@ -204,15 +204,10 @@
   </main>
 
 
-
-=======
-    </div>
-  </main>
-
   <footer>
     <div class="container">
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-        <p class="col-md-4 mb-0 text-muted">&copy; 2022 Company, Inc</p>
+        <p class="col-md-4 mb-0 text-muted">&copy; 2022 Bit Finace</p>
 
         <a href="/"
           class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
@@ -241,4 +236,3 @@
 </body>
 
 </html>
-
