--- a/contato.html
+++ b/contato.html
@@ -33,11 +33,8 @@
     </div>
   </header>
   <main>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere illum,
-      qui numquam neque voluptate unde aut, dignissimos officia nam atque
-      ducimus dolor. Obcaecati qui vitae est iure harum nisi illum!
-    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae laudantium quae accusamus repellendus reiciendis eligendi beatae, iusto,
+       ratione fugit ab ipsum impedit sapiente saepe deserunt nostrum molestiae quaerat repellat voluptate!</p>
   </main>
 
   <footer>
@@ -53,11 +50,11 @@
         </a>
 
         <ul class="nav col-md-4 justify-content-end">
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+          <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
+          <li class="nav-item"><a href="produto.html" class="nav-link px-2 text-muted">Serviço</a></li>
+          <li class="nav-item"><a href="login.html" class="nav-link px-2 text-muted">Login</a></li>
+          <li class="nav-item"><a href="cadastro.html" class="nav-link px-2 text-muted">Cadastro</a></li>
+          <li class="nav-item"><a href="contato.html" class="nav-link px-2 text-muted">Contato</a></li>
         </ul>
       </footer>
     </div>
