--- a/index.html
+++ b/index.html
@@ -217,11 +217,11 @@
         </a>
 
         <ul class="nav col-md-4 justify-content-end">
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+          <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
+          <li class="nav-item"><a href="produto.html" class="nav-link px-2 text-muted">Serviço</a></li>
+          <li class="nav-item"><a href="login.html" class="nav-link px-2 text-muted">Login</a></li>
+          <li class="nav-item"><a href="cadastro.html" class="nav-link px-2 text-muted">Cadastro</a></li>
+          <li class="nav-item"><a href="contato.html" class="nav-link px-2 text-muted">Contato</a></li>
         </ul>
       </footer>
     </div>
