--- a/Recuperação.html
+++ b/Recuperação.html
@@ -1,27 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recuperar senha</title>
+    <link rel="stylesheet" href="./css/stile.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
 </head>
-<body>
- 
 
-    <form id="form">
-        <div>
-            <div><label>Email</label></div>
-            <input  type="email" class="inputs-required"  placeholder="Email" oninput="onChangeEmail()"/>
-            <span class="span-required" id="email-invalid-error">Email inválido</span>
+<body>
+    <header>
+        <div class="editar">
+            <nav>
+                <a class="logo" href="index.html">Bit Finance</a>
+                <div class="mobile-menu">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+                </div>
+                <ul class="nav-list">
+                    <li><a href="index.html">Início</a></li>
+                    <li><a href="produto.html">Serviço</a></li>
+                    <li><a href="login.html">Login</a></li>
+                    <li><a href="cadastro.html">Cadastro</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
         </div>
+    </header>
+
+    <div class="recuperar">
+
+        <form id="form">
+            <div>
+                <div><label>Email</label></div>
+                <input type="email" class="inputs-required" placeholder="Email" oninput="onChangeEmail()" />
+                <span class="span-required" id="email-invalid-error">Email inválido</span>
+            </div>
 
             <button type="submit" class="env">Enviar</button>
-        </div>
-    
-            <link rel="stylesheet" href="css/Recuperar.css">
+    </div>
+    </div>
 
-            <script src="recuperacao.js"></script>
-            
+    <footer>
+        <div class="container">
+            <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+                <p class="col-md-4 mb-0 text-muted">&copy; 2022 Bit Finace</p>
+
+                <a href="/"
+                    class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+                    <svg class="bi me-2" width="40" height="32">
+                        <use xlink:href="#bootstrap" />
+                    </svg>
+                </a>
+
+                <ul class="nav col-md-4 justify-content-end">
+                    <li class="nav-item"><a href="index.html" class="nav-link px-2 text-muted">Home</a></li>
+                    <li class="nav-item"><a href="produto.html" class="nav-link px-2 text-muted">Serviço</a></li>
+                    <li class="nav-item"><a href="login.html" class="nav-link px-2 text-muted">Login</a></li>
+                    <li class="nav-item"><a href="cadastro.html" class="nav-link px-2 text-muted">cadastro</a></li>
+                    <li class="nav-item"><a href="contato.html" class="nav-link px-2 text-muted">Contato</a></li>
+                </ul>
+            </footer>
+        </div>
+    </footer>
+
+
+
+    <link rel="stylesheet" href="css/Recuperar.css">
+
+    <script src="js/recuperacao.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"
+        integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
+        crossorigin="anonymous"></script>
+
 </body>
+
 </html>
