--- a/login.html
+++ b/login.html
@@ -55,7 +55,7 @@
                 <button type="button" class="solid" id="login-button" disabled="true">Entrar</button>
             </div>
             <div>
-                <button type="button" class="outline">Registre-se</button>
+                <a href="cadastro.html"><button type="button" class="outline">Registre-se</button></a>
             </div>
         </form>
     </div>
