dei uma ajeitada no css

--- a/contato.html
+++ b/contato.html
@@ -46,29 +46,31 @@
 
         <!---------------------------------------------------------------------------------------------------->
         <div class="card1">
+          <div class="luc">
           <img src="img/Luciano.jpg" alt="">
           <h2> Luciano </h2>
           <h4><u>lucianoramos218.lr@gmail.com</u></h4>
-
+        </div>
           <!---------------------------------------------------------------------------------------------->
         </div>
         <div class="card1">
+          <div class="gui">
           <img src="img/Guilherme.jpg" alt="">
           <h2> Guilherme </h2>
           <h6><u>guilhermemoraes228@gmail.com</u></h6>
-
+        </div>
         </div>
         <!--------------------------------------------------------------------------------------------------->
         <!--- <div class="card1">
       <img src="img/Sara.jpg" alt="">
       <h2> Sara </h2>
     </div> 
-<!--------------------------------------------------------------------------------------------------------->
+ ------------------------------------------------------------------------------------------------------->
         <!-- <div class="card1">
       <img src="img/Ismael.jpg" alt="">
       <h2> Ismael </h2>
     </div>
-<!----------------------------------------------------------------------------------------------------------->
+--------------------------------------------------------------------------------------------------------->
       </div>
       <!--cards-->
 
@@ -76,10 +78,13 @@
     <!--principal-->
 
     <div class="principal2">
+      <div class="cards">
       <div class="card1">
+        <div class="sar">
         <img src="img/Sara.jpg" alt="">
         <h2> Sara </h2>
         <h6><u>sara.nobrega28@hotmail.com</u></h6>
+      </div>
       </div>
 
       <div class="card1">
@@ -87,6 +92,7 @@
         <h2> Ismael </h2>
         <h6><u>ismaelwadejr07@gmail.com</u></h6>
       </div>
+    </div>
 
     </div>
 
